Added AsyncTask with not finished network code and a refresh button

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+MyOpenWeatherMapApiKey="4b7dc13ea0dca5b34e2fc1819b34149f"
